manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: the-clock-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-clock-app
  namespace: the-clock-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-clock-app
  template:
    metadata:
      labels:
        app: the-clock-app
    spec:
      containers:
        - name: the-clock-app
          image:  docker.io/raphabot/the-clock-app:1.0.0@sha256:077968adaa4e9ea1c3873ed7e8711f108d8bcf8c324413785291f8cbcb903af2
          imagePullPolicy: Never
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 80
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64

---
apiVersion: v1
kind: Service
metadata:
  name: the-clock-app-service
  namespace: the-clock-app
spec:
  ports:
  - port: 80
    targetPort: 80
    name: tcp
  selector:
    app: the-clock-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-clock-app-ingress
  namespace: the-clock-app
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: the-clock-app-service
            port:
              number: 80
